@@ -24,3 +24,4 @@ Luke Tierney            for helpful discussions on R internals
 Simon Urbanek           for help on OS X build issues and with R internals
 Ken Williams            for additional OS X testing
 Jelmer Ypma             for contributing the Rcout iostreams class patch
+Yan Zhou		for a patch to RcppCommon.h extending compiler support 
